2002-10-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/comp_exp.c :
	* exp/comp_exp.h :
	* exp/gnd_exp.c :
	* exp/gnd_exp.h :

	  - Removed unnecessary delete function. May have caused
	    inconsistencies in the expressions.

2002-10-20  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/gnd_exp.c :

	  - Fixed the error that causes the check of whether the
	    negation of an atom is already present to fail.

	  - Fixed bug that adds an atom even though its negation is
	    already there.

	  - add function now allows an atom to be replaced by its negation
	    IF AND ONLY IF it is not implied by any other atom.

	* exp/gnd_atom.h :
	* exp/gnd_atom.c :

	  - Changed copy function to simply copy the atom without
	    allocating memory (analogous strcpy).

	  - Added dup function to allocate memory and copy the atom.
	    (analogous to strdup).

	* exp/gnd_exp.c :

	  - eval_atom function now only checks if the atom is a logical
	    consequence of the other atoms in the expression. It no
	    longer checks if the atom is explicitly stated in the
	    expression.

2002-10-19  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* exp/comp_exp.c :
	* exp/gnd_exp.c :
	* ident/identlist.c :
	* ident/symtab.c :
	* trans/translist.c :
	* trans/transtab.c :

	  - Added a purge function in simplelist.

2002-10-15  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/stringlist.c :
	* exp/comp_exp.c :
	* exp/gnd_exp.c :
	* ident/identlist.c :
	* ident/symtab.c :
	* trans/translist.c :
	* trans/transtab.c :

	  - Re-initialised lists after they have been purged.


2003-10-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/sample :
	* example/sample :
	* example/geography:
	
	  - Moved test files to example directory.

	* exp/gnd_exp.c :

	  - Added get_subgroups, get_non_subgroups, get_supergroups,
	    get_non_supergroups, get_elements and get_non_elements functions.
