@@ -7,12 +7,15 @@
 #include "simplelist.h"
 
 /* initialise list */
-void simplelist_init(simplelist_type *list)
+int simplelist_init(simplelist_type *list)
 {
-  if (list != NULL) {
-    list->list = NULL;
-    list->length = 0;
-  }
+  if (list == NULL)
+    return SIMPLELIST_ERROR_NULLPTR;
+  
+  list->list = NULL;
+  list->length = 0;
+
+  return SIMPLELIST_OK;
 }
 
 /* return length */
@@ -29,11 +32,10 @@ int simplelist_index(simplelist_type list,
 {
   simplelist_node *curr;
 
-  if (list.length <= 0 ||
-      data == NULL ||
+  if (data == NULL ||
       index == NULL ||
       cmp == NULL)
-    return -1;
+    return SIMPLELIST_ERROR_NULLPTR;
 
   curr = list.list;
   *index = list.length;
@@ -42,12 +44,12 @@ int simplelist_index(simplelist_type list,
     *index = *index - 1;
 
     if (cmp(curr->data, data) == 0)
-      return 0;
+      return SIMPLELIST_OK;
 
     curr = curr->next;
   }
 
-  return -1;
+  return SIMPLELIST_ERROR_NOTFOUND;
 }
 
 /* add pointer to list, assumes memory has been allocated to it */
@@ -56,17 +58,17 @@ int simplelist_add(simplelist_type *list, void *data)
   simplelist_node *new_node;
 
   if (list == NULL || data == NULL)
-    return -1;
+    return SIMPLELIST_ERROR_NULLPTR;
 
   if ((new_node = (simplelist_node *) malloc(sizeof(simplelist_node))) == NULL)
-    return -1;
+    return SIMPLELIST_ERROR_MALLOC;
 
   new_node->data = data;
   new_node->next = list->list;
   list->list = new_node;
   (list->length)++;
 
-  return 0;
+  return SIMPLELIST_OK;
 }
 
 /* deletes index'th data, give fr function to free the pointer 
@@ -79,8 +81,11 @@ int simplelist_del_index(simplelist_type *list,
   simplelist_node *curr;
   unsigned int i;
 
-  if (list == NULL || list->length <= 0 || index >= list->length)
-    return -1;
+  if (list == NULL)
+    return SIMPLELIST_ERROR_NULLPTR;
+
+  if (list->length <= 0 || index >= list->length)
+    return SIMPLELIST_ERROR_OUTOFBOUNDS;
 
   prev = NULL;
   curr = list->list;
@@ -101,7 +106,7 @@ int simplelist_del_index(simplelist_type *list,
 
   (list->length)--;
 
-  return 0;
+  return SIMPLELIST_OK;
 }
 
 /* deletes all the nodes that matches data, uses cmp to compare, 
@@ -113,19 +118,21 @@ int simplelist_del_data(simplelist_type *list,
 {
   simplelist_node *prev;
   simplelist_node *curr;
+  int found = 0;
 
   if (list == NULL ||
-      list->length <= 0 ||
       data == NULL ||
-      cmp == NULL ||
-      fr == NULL)
-    return -1;
+      cmp == NULL)
+    return SIMPLELIST_ERROR_NULLPTR;
 
   prev = NULL;
   curr = list->list;
 
   while (curr != NULL) {
     if (cmp(curr->data, data) == 0) {
+
+      found = 1;
+
       if (prev == NULL)
         list->list = list->list->next;
       else
@@ -142,7 +149,7 @@ int simplelist_del_data(simplelist_type *list,
     curr = curr->next;
   }
 
-  return 0;
+  return (found ? SIMPLELIST_OK : SIMPLELIST_ERROR_NOTFOUND);
 }
 
 /* gives a reference to the index'th data */
@@ -153,8 +160,11 @@ int simplelist_get_index(simplelist_type list,
   unsigned int i;
   simplelist_node *curr;
 
-  if (list.length <= 0 || index >= list.length || ref == NULL)
-   return -1;
+  if (ref == NULL)
+    return SIMPLELIST_ERROR_NULLPTR;
+
+  if (list.length <= 0 || index >= list.length)
+   return SIMPLELIST_ERROR_OUTOFBOUNDS;
 
   curr = list.list;
 
@@ -163,7 +173,7 @@ int simplelist_get_index(simplelist_type list,
 
   *ref = curr->data;
 
-  return 0;
+  return SIMPLELIST_OK;
 }
 
 /* returns a list of nodes that matches the given data. uses cmp to compare.
@@ -175,27 +185,35 @@ int simplelist_get_data(simplelist_type list,
                         int (*cmp)(void *, void*))
 {
   simplelist_node *curr;
-  char notfound = -1;
+  simplelist_node *new;
+  char found = 0;
 
-  if (list.length <= 0 ||
-      data == NULL ||
+  if (data == NULL ||
       res == NULL ||
       cmp == NULL) 
-    return -1;
+    return SIMPLELIST_ERROR_NULLPTR;
 
-  simplelist_init(res);
+  res->list = NULL;
+  res->length = 0;
   curr = list.list;
 
   while (curr != NULL) {
     if (cmp(curr->data, data) == 0) {
-      notfound = 0;
-      if (simplelist_add(res, curr->data) != 0)
-        return -1;
+      found = 1;
+
+      if ((new = (simplelist_node *) malloc(sizeof(simplelist_node))) == NULL)
+        return SIMPLELIST_ERROR_MALLOC;
+    
+      new->data = curr->data;
+      new->next = res->list;
+      res->list= new;
+      (res->length)++;
     }
+
     curr = curr->next;
   }
 
-  return notfound;
+  return (found ? SIMPLELIST_OK : SIMPLELIST_ERROR_NOTFOUND);
 }
 
 /* returns 0 if data is in the list, uses cmp to compare pointers */
@@ -205,21 +223,20 @@ int simplelist_find_data(simplelist_type list,
 {
   simplelist_node *curr;
 
-  if (list.length <= 0 ||
-      data == NULL ||
+  if (data == NULL ||
       cmp == NULL) 
-    return -1;
+    return SIMPLELIST_ERROR_NULLPTR;
 
   curr = list.list;
 
   while (curr != NULL) {
     if (cmp(curr->data, data) == 0) 
-      return 0;
+      return SIMPLELIST_OK;
 
     curr = curr->next;
   }
 
-  return -1;
+  return SIMPLELIST_ERROR_NOTFOUND;
 }
 
 /* makes an exact copy of l1 to l2, uses cpy to make a new copy */
@@ -234,22 +251,21 @@ int simplelist_copy(simplelist_type l1,
   void *data;
 
   if (l2 == NULL || cpy == NULL)
-    return -1;
+    return SIMPLELIST_ERROR_NULLPTR;
 
   curr = l1.list;
-
   l2->list = NULL;
   l2->length = 0;
   last = NULL;
 
   while (curr != NULL) {
     if (cpy(curr->data, &data) != 0)
-      return -1;
+      return SIMPLELIST_ERROR_UNKNOWN;
     
     /* we have to attach the new node at the end of the list to
      * preserve the original order */
     if ((new = (simplelist_node *) malloc(sizeof(simplelist_node))) == NULL)
-      return -1;
+      return SIMPLELIST_ERROR_MALLOC;
 
     if (last == NULL)
       l2->list = new;
@@ -263,7 +279,7 @@ int simplelist_copy(simplelist_type l1,
     curr = curr->next;
   }
 
-  return 0;
+  return SIMPLELIST_OK;
 }
 
 /* destroys the list. uses the fr function to free the nodes */
